name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   _src/
  main-is:          Site.hs
  build-depends:    base >=4.7 && <5
                  , clay
                  , hakyll
                  , pandoc
                  , text
  other-modules:    SiteCss
  ghc-options:      -threaded
  default-language: Haskell2010
